--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="styles.css"/>
+    <title>Blog</title>
 </head>
 <body>
-    
+    <h1>Sincerley J+W </h1>
+
+    <!-- This is for the nav bar  -->
+    <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#contact">Contact</a>
+      </div>
+
+      <!-- Gets the image from our "images" folder -->
+     <img src="/images/IMG_4322.jpg" alt="test" >
+    <!-- Div is set here to put in a short about statement -->
+     <div style = "position:absolute; right:600px; top:200px; background-color:yellow;">
+        <h2>About</h2>
+    </div>
 </body>
 </html>
